# minuit2-rs

./: .gitignore  ANALYTICAL_GRADIENT_IMPLEMENTATION.md  ANALYTICAL_GRADIENT_KEY_CHANGES.md  CHANGELOG.md  Cargo.toml  DOC.md  INVENTORY.md  NOTICE  OPTIONS.md  README.md  VISION.md  deny.toml  plan_2026-02-10.md  plan_2026-02-11.md  plan_phase1.md  plan_phase2.md  plan_phase3.md  plan_phase4.md  plan_phase5.md  pyproject.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  scientific-demo-scheduled.yml  scientific-demo.yml
assets/: readme-banner-v1.md  readme-banner-v2.md
benches/: benchmarks.rs
docs/: goals-ledger.md  goals.md  improve-ledger.md
examples/: README.md  chi_square.rs  compare_timings.py  gaussian_fit.rs  nist_strd_hard.rs  rosenbrock.rs  rosenbrock_hesse.rs  rosenbrock_migrad.rs  run_comparison.sh
examples/cern_dimuon/: README.md  main.rs  plot.py  run.sh
examples/cern_dimuon/output/: cern_murun2010b0_jpsi_curve.csv  cern_zmumu_zpeak_curve.csv
examples/data/: SHA256SUMS
examples/data/noaa/: co2_mm_mlo.csv
examples/data/usgs/: earthquakes_2025_m4p5.csv
examples/nist_strd/: README.md  main.rs  plot.py  run.sh
examples/nist_strd/output/: nist_hahn1_curve.csv  nist_misra1a_curve.csv  nist_rat43_curve.csv  nist_summary.csv
examples/noaa_co2/: README.md  main.rs  plot.py  run.sh
examples/noaa_co2/output/: noaa_co2_curve.csv
examples/output/: comparison_environment.json  comparison_samples.csv  comparison_timings.csv
examples/usgs_earthquakes/: README.md  main.rs  plot.py  run.sh
examples/usgs_earthquakes/output/: usgs_gutenberg_richter_curve.csv
python/compat/: diff_iminuit.py  nist_models.py
python/minuit2/: __init__.py
python/tests/: test_phase2.py  test_smoke.py
reports/benchmarks/: benchmark_baseline.md  default_raw.txt  parallel_raw.txt
reports/coverage/: all_features_coverage.md  all_features_coverage_raw.txt  core_coverage.md  core_coverage_raw.txt
reports/parity/: README.md  dropin_compat.md  functions.csv  gaps.md  hahn1_core_divergence.md  missing.csv  needs_review.csv  negative_g2_audit.md  nist_hard_baseline.md
reports/provenance/: audit.md  manual_review.md  similarity_inventory.csv
reports/security/: final_audit_v0.5.2.md
reports/verification/: README.md  diff_results.csv  diff_summary.md  executed_surface_gaps.csv  executed_surface_manifest.json  executed_surface_mapping.md  known_differences.md  manifest.json  root_test_port_status.md  root_test_replication_matrix.md  scorecard.md  traceability_matrix.csv  traceability_summary.md
reports/verification/raw/ref/: quadratic2_contours_01.json  quadratic2_limited_migrad.json  quadratic2_lower_limited_migrad.json  quadratic2_minos_p0.json  quadratic2_minos_p1.json  quadratic2_no_g2_migrad.json  quadratic2_scan_p0.json  quadratic2_scan_p1_limited.json  quadratic2_simplex.json  quadratic2_upper_limited_migrad.json  quadratic3_fixx_hesse.json  quadratic3_fixx_migrad.json  rosenbrock2_migrad.json  rosenbrock2_migrad_strategy2.json  rosenbrock2_minimize.json
reports/verification/raw/rust/: quadratic2_contours_01.json  quadratic2_limited_migrad.json  quadratic2_lower_limited_migrad.json  quadratic2_minos_p0.json  quadratic2_minos_p1.json  quadratic2_no_g2_migrad.json  quadratic2_scan_p0.json  quadratic2_scan_p1_limited.json  quadratic2_simplex.json  quadratic2_upper_limited_migrad.json  quadratic3_fixx_hesse.json  quadratic3_fixx_migrad.json  rosenbrock2_migrad.json  rosenbrock2_migrad_strategy2.json  rosenbrock2_minimize.json
reports/verification/raw/trace/: hahn1.root.jsonl  hahn1.rs.jsonl  quadratic3_fixx_migrad.root.jsonl  quadratic3_fixx_migrad.rust.jsonl  rosenbrock2_migrad.root.jsonl  rosenbrock2_migrad.rust.jsonl
reports/verification/reference_coverage/: executed_functions.csv  manifest.json  summary.md  unexecuted_functions.csv
reports/verification/reference_coverage/raw/: llvm_cov_export.json  quadratic2_contours_01.json  quadratic2_lower_limited_migrad.json  quadratic2_minos_p0.json  quadratic2_minos_p1.json  quadratic2_no_g2_migrad.json  quadratic2_scan_p0.json  (+6 more)
scripts/: build_root_reference_runner.sh  check_executed_surface_gate.py  check_traceability_gate.py  compare_ref_vs_rust.py  diff_iteration_traces.py  fetch_scientific_demo_data.sh  generate_benchmark_report.py  generate_coverage_reports.py  generate_executed_surface_mapping.py  generate_parity_report.py  generate_reference_coverage.py  generate_similarity_audit.py  generate_traceability_matrix.py  generate_verification_scorecard.py  nist_hard_baseline.py  run_full_verification.sh
src/: application.rs  covariance_squeeze.rs  fcn.rs  global_cc.rs  lib.rs  linesearch.rs  mn_fcn.rs  parabola.rs  parameter.rs  posdef.rs  precision.rs  print.rs  python.rs  strategy.rs  user_covariance.rs  user_parameter_state.rs  user_parameters.rs  user_transformation.rs
src/contours/: contours_error.rs  mod.rs
src/gradient/: analytical.rs  initial.rs  mod.rs  numerical.rs
src/hesse/: calculator.rs  gradient.rs  mod.rs
src/migrad/: builder.rs  minimizer.rs  mod.rs  seed.rs
src/minimize/: mod.rs
src/minimum/: error.rs  gradient.rs  mod.rs  parameters.rs  seed.rs  state.rs
src/minos/: cross.rs  function_cross.rs  minos_error.rs  mod.rs
src/scan/: builder.rs  minimizer.rs  mod.rs  seed.rs
src/simplex/: builder.rs  minimizer.rs  mod.rs  parameters.rs  seed.rs
src/transform/: mod.rs  sin.rs  sqrt_low.rs  sqrt_up.rs
tests/: application.rs  common.rs  contours.rs  hahn1_core_parity.rs  hesse.rs  limit_boundary.rs  metamorphic.rs  migrad.rs  migrad_analytical.rs  minimize.rs  minos.rs  negative_g2.rs  nist_strd_certified.rs  proptest_metamorphic.rs  robustness.rs  root_reference_covariance.rs  root_reference_minuit2.rs  scan.rs  scan_minimizer.rs  simplex.rs
tools/ref_runner_cpp/: CMakeLists.txt  main.cpp
tools/scientific_runner_cpp/: CMakeLists.txt  main.cpp
verification/traceability/: executed_surface_gaps_baseline.csv  traceability_baseline.csv  waiver_rules.csv  waivers.csv
verification/workloads/: root_minuit2_v6_36_08.json
