[package]
name = "minuit2"
version = "0.4.0"
edition = "2024"
description = "Pure Rust port of CERN Minuit2 parameter optimization engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricardofrantz/minuit2-rs"
keywords = ["optimization", "minimization", "fitting", "physics"]
categories = ["science", "mathematics"]

[dependencies]
nalgebra = "0.33"
rayon = { version = "1.10", optional = true }
pyo3 = { version = "0.28", optional = true, features = ["extension-module"] }

[dev-dependencies]
criterion = "0.5"

[features]
parallel = ["rayon"]
python = ["pyo3"]

[[bench]]
name = "benchmarks"
harness = false
