[package]
name = "minuit2"
version = "0.5.1"
edition = "2024"
rust-version = "1.85"
description = "Pure Rust implementation of Minuit-style parameter optimization"
license = "LGPL-2.1-or-later"
repository = "https://github.com/ricardofrantz/minuit2-rs"
documentation = "https://docs.rs/minuit2"
homepage = "https://github.com/ricardofrantz/minuit2-rs"
readme = "README.md"
keywords = ["optimization", "minimization", "fitting", "physics"]
categories = ["science", "mathematics"]
# Allowlist: publish only what downstream crate users need to build and read.
# Excludes example datasets, verification reports, coverage dumps, figures, and
# dev tooling (scripts/, tools/, python/) that bloated the crate to 8.4 MiB.
# benches/benchmarks.rs is required because it is a declared [[bench]] target.
# Leading "/" anchors each pattern to the package root. Without it, gitignore
# glob semantics match a bare basename (README.md, LICENSE-MIT) at ANY depth,
# which would pull in nested READMEs and stray build-dir artifacts.
include = [
    "/src/**/*.rs",
    "/benches/benchmarks.rs",
    "/examples/**/main.rs",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/NOTICE",
]

[lib]
name = "minuit2"
# rlib: used by integration tests, benches, and src/bin/ref_compare_runner.
# cdylib: linked by maturin into the Python extension module.
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.33"
rayon = { version = "1.10", optional = true }
pyo3 = { version = "0.28", optional = true, features = ["extension-module", "abi3-py39"] }
numpy = { version = "0.28", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.11"

[features]
parallel = ["rayon"]
python = ["pyo3", "numpy"]

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
# Build docs.rs with every feature enabled so the Python and parallel
# surfaces are both rendered.
all-features = true

[lints.rust]
# No hand-written unsafe in this crate. `warn` (not `deny`) because macro
# expansions in the optional pyo3 feature legitimately produce unsafe
# blocks and we do not want to force every downstream proc-macro change
# through this gate.
unsafe_code = "warn"

[lints.clippy]
# Bug-catching lints at deny: these should never slip into a release.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
use_debug = "deny"
# A library should never terminate the host process.
exit = "deny"
